# BiasAskerCustom

./: .gitignore  BiasAsker.py  README.md  apis.py  experiment.py  pyproject.toml  requirements.txt
data/: groups_for_auto.csv
figs/: mistral_race.csv  mistral_race_all.csv  mistral_relative.csv  pair_data.csv  single_data.csv
save/: mistral
src/biasasker/: __init__.py  api.py
src/biasasker/data/: sample_bias_data_for_auto.csv
